# vk_slang_editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
examples/Basics/: Displacement Mapping with Autodiff.json  Displacement Mapping with Autodiff.slang  Julia.json  Julia.slang  Mandelbrot.json  Mandelbrot.slang  Multiple Vertex Shaders.json  Multiple Vertex Shaders.slang  Perspective.json  Perspective.slang  Rasterization.json  Rasterization.slang  Wireframe.json  Wireframe.slang
examples/Modules/: nv_cubic_solver.slang  nv_cubic_solver_demo.json  nv_cubic_solver_demo.slang
examples/Showcase/: Fractal Flame.json  Fractal Flame.slang  GLSL Input.json  GLSL Input.slang  Mandelbox.json  Mandelbox.slang
examples/Siggraph2025/: 1 - Mandelbrot.json  1 - Mandelbrot.slang  2 - Shader IO.json  2 - Shader IO.slang  3 - Interfaces.json  3 - Interfaces.slang  interface_scene.slang
examples/Siggraph2025/Solutions/: 2 - Shader IO - Solution.json  2 - Shader IO - Solution.slang  3 - Interfaces - Solution.json  3 - Interfaces - Solution.slang
src/: gui_reflection.cpp  gui_reflection.h  io_image.cpp  io_image.h  io_params.cpp  io_params.h  language.cpp  language.h  language_highlight_autogen.cpp  language_highlight_autogen.h  language_highlight_autogen.py  resources.cpp  resources.h  sample.h  sample_gui.cpp  sample_render.cpp  utilities.cpp  utilities.h
tests/: bool4x3-gui.json  bool4x3-gui.slang  diagnostics.slang  geometry.json  geometry.slang  matrix-gui.json  matrix-gui.slang  no-bindings.slang  tessellation.json  tessellation.slang
